cli/tests/snapshot/snapshots/snapshot__eval_stderr_destructuring_rest_fail.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: missing field `a`
  ┌─ [INPUTS_PATH]/errors/destructuring_rest_fail.ncl:4:1
  │
3 │ let {a, ..y} = {a=1, b=2} in
  │                ---------- this record lacks the field `a`
4 │ y.a
  │ ^^^ this requires the field `a` to exist
